# rust-labs

2-types/part_1-2/src/: main.rs  part_1.rs  part_2.rs
5-conf_log/: Cargo.toml
5-conf_log/src/: main.rs
8-macro/btreemap-decl/: Cargo.toml
8-macro/btreemap-decl/src/: lib.rs
8-macro/btreemap-decl/tests/: basic.rs
8-macro/btreemap-proc/: Cargo.toml
8-macro/btreemap-proc/src/: lib.rs
8-macro/btreemap-proc/tests/: basic.rs
LABS/lab1/: Cargo.toml  questions.md
LABS/lab1/src/: main.rs
LABS/lab2/: Cargo.toml  questions.md
LABS/lab2/src/: main.rs
LABS/lab3/: Cargo.toml  questions.md
LABS/lab3/src/: main.rs
LABS/lab4/: Cargo.toml  bugs.md  questions.md
LABS/lab4/src/: main.rs
LABS/lab5/: Cargo.toml  comparison.md  questions.md
LABS/lab5/src/: main.rs
LABS/lab6/: Cargo.toml  benchmark.md  questions.md
LABS/lab6/src/: lib.rs  main.rs  my_arc.rs  my_mutex.rs
LABS/lab7/: Cargo.toml  images.txt  questions.md
LABS/lab7/src/: main.rs
LABS/lab8/: Cargo.toml  questions.md  report.md
LABS/lab8/src/: main.rs
LABS/lab9/: Cargo.toml  questions.md  refactoring.md
LABS/lab9/src/: main.rs
PRACTS/pract1/: Cargo.toml  questions.md
PRACTS/pract1/src/: main.rs
PRACTS/pract2/: .files_index.json  .files_index.sqlite  Cargo.toml  questions.md
PRACTS/pract2/src/: main.rs  storage.rs
PRACTS/pract3/: .files_index.sqlite  Cargo.toml  questions.md
PRACTS/pract3/filesindex/: Cargo.toml
PRACTS/pract3/filesindex-core/src/: lib.rs
PRACTS/pract3/filesindex/src/: main.rs
PRACTS/pract4/: .files_index.json  .files_index.sqlite  bugs.md  questions.md
PRACTS/pract4/filesindex-core/: Cargo.toml
PRACTS/pract4/filesindex-core/src/: lib.rs
PRACTS/pract4/filesindex/src/: main.rs
PRACTS/pract5/: Cargo.toml  questions.md
PRACTS/pract5/test_dir/: a.txt.data  b.txt.data
PRACTS/pract6/: questions.md  research.md
PRACTS/pract7/: Cargo.toml  questions.md  urls.txt
PRACTS/pract7/src/: main.rs
PRACTS/pract8/: Cargo.toml  questions.md
PRACTS/pract8/src/: main.rs
PRACTS/pract9/: Cargo.toml  questions.md  refactoring.md
PRACTS/pract9/src/: main.rs
SMR/smr1/: questions.md
SMR/smr2/: questions.md
SMR/smr3/: questions.md
SMR/smr4/: questions.md
snippets-app/: Cargo.toml  snips.sqlite
snippets-app/src/: main.rs
