[package]
name = "lab5"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
image = "0.25"
clap = { version = "4", features = ["derive"] }
aws-sdk-s3 = "1"
aws-config = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
thiserror = "1"
rayon = "1"

[profile.release]
opt-level = 3
