[package]
name = "lab7"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12"
image = "0.25"
clap = { version = "4", features = ["derive"] }
aws-sdk-s3 = "1"
aws-config = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
futures = "0.3"

[profile.release]
opt-level = 3
