[package]
name = "filesindex"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "filesindex"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
